--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "generate:module": "npx nest generate module",
-    "generate:service": "npx nest generate service"
+    "generate:service": "npx nest generate service",
+    "generate:resource": "npx nest generate resource"
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
