--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "generate:module": "npx nest generate module",
     "generate:service": "npx nest generate service",
-    "generate:resource": "npx nest generate resource"
+    "generate:resource": "npx nest generate resource",
+    "generate:filter": "npx nest generate filter"
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
